# wilma-bot

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  env.example  pyproject.toml  test-http.sh
docs/: architecture.md  configuration.md  mcp-tools.md  protocol.md
src/wilma_bot/: __init__.py  __main__.py  config.py
src/wilma_bot/client/: __init__.py  data_parser.py  json_repair.py  models.py  wilma.py
src/wilma_bot/mcp/: __init__.py  server.py  tools.py
stack/: README.md  docker-compose.yml
stack/skills/wilmabot/: SKILL.md
tests/: test_client.py  test_json_repair.py  test_tools.py
