[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wilma-bot"
version = "0.1.0"
description = "Visma Wilma MCP server for AI/agentic workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
wilma-bot = "wilma_bot.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-requests>=2.32.0",
    "types-beautifulsoup4>=4.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wilma_bot"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=wilma_bot --cov-report=term-missing"
